--- a/Source/Android/Nevix/nevix/src/main/res/layout/activity_authenticate.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/layout/activity_authenticate.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/container_auth"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.antonyjekov.nevix.activities.MainActivity"
+    tools:context="com.antonyjekov.nevix.activities.AuthenticateActivity"
     tools:ignore="MergeRootFrame" />
