--- a/Source/Android/Nevix/nevix/src/main/res/menu/main.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/menu/main.xml
@@ -1,10 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.antonyjekov.nevix.MainActivity" >
-    
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+    xmlns:nevix="http://schemas.android.com/apk/res-auto" >
+    <!-- Search, should appear as action button -->
+    <item android:id="@+id/logoff"
+        android:title="Log Out"
+        nevix:showAsAction="never"  />
+
 </menu>
