--- a/Source/Android/Nevix/nevix/src/main/res/layout/activity_main.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/layout/activity_main.xml
@@ -1,8 +1,78 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.antonyjekov.nevix.activities.MainActivity"
-    tools:ignore="MergeRootFrame"
-    android:orientation="vertical"/>
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.antonyjekov.nevix.activities.MainActivity$PlaceholderFragment"
+    android:orientation="vertical">
+
+    <Button
+        android:id="@+id/play_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/play_btn"/>
+
+    <Button
+        android:id="@+id/pause_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/pause_btn"/>
+
+    <Button
+        android:id="@+id/next_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_btn"/>
+
+    <Button
+        android:id="@+id/prev_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/prev_btn"/>
+
+    <Button
+        android:id="@+id/volume_up_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/volume_up_btn"/>
+
+    <Button
+        android:id="@+id/volume_down_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/volume_down_btn"/>
+
+    <Button
+        android:id="@+id/rw_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/rw_btn"/>
+
+    <Button
+        android:id="@+id/ff_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ff_btn"/>
+
+    <Button
+        android:id="@+id/full_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/full_btn"/>
+
+    <Button
+    android:id="@+id/step_f_btn"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/step_f_btn"/>
+
+    <Button
+        android:id="@+id/step_b_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/step_b_btn"/>
+
+</LinearLayout>
