--- a/Source/Android/Nevix/nevix/src/main/res/values/dimens.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="input_top_margin">15dp</dimen>
     <dimen name="btn_margin_top">25dp</dimen>
     <dimen name="toggle_margin_top">50dp</dimen>
+    <dimen name="prime_btn_text_size">35dp</dimen>
 
 </resources>
