--- a/Source/Android/Nevix/nevix/src/main/res/layout/fragment_authenticate.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/layout/fragment_authenticate.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:padding="28dp"
+    android:layout_gravity="center_vertical">
 
     <EditText
         android:id="@+id/auth_email"
@@ -29,27 +32,47 @@
         android:password="true"
         android:visibility="gone"/>
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Remember Me"
+        android:layout_marginTop="30dp"/>
+
     <Button
         android:id="@+id/auth_login_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/auth_login_btn"
         android:layout_marginTop="@dimen/btn_margin_top"
+        android:layout_gravity="center_horizontal"
         />
 
     <Button
         android:id="@+id/auth_register_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/auth_register_btn"
         android:layout_marginTop="@dimen/btn_margin_top"
         android:visibility="gone"
+        android:layout_gravity="clip_horizontal"
         />
 
     <Button
-        android:id="@+id/auth_toggle"
+        android:id="@+id/auth_goto_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Toggle Register"
-        android:layout_marginTop="@dimen/toggle_margin_top"/>
+        android:text="Go to Register"
+        android:layout_marginTop="@dimen/toggle_margin_top"
+        android:layout_gravity="center_horizontal"
+        />
+
+    <Button
+        android:id="@+id/auth_goto_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go to Login"
+        android:layout_marginTop="@dimen/toggle_margin_top"
+        android:layout_gravity="center_horizontal"
+        android:visibility="gone"
+        />
 </LinearLayout>
