--- a/Source/Android/Nevix/nevix/src/main/res/menu/main.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/menu/main.xml
@@ -1,8 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:nevix="http://schemas.android.com/apk/res-auto" >
-    <!-- Search, should appear as action button -->
     <item android:id="@+id/logoff"
-        android:title="Log Out"
+        android:title="@string/log_off"
         nevix:showAsAction="never"  />
-
 </menu>
