Fixed launcher problem.

--- a/Source/Android/Nevix/nevix/src/main/res/layout/fragment_authenticate.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/layout/fragment_authenticate.xml
@@ -4,8 +4,9 @@
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:padding="28dp"
-    android:layout_gravity="center_vertical">
+    android:padding="20dp"
+    android:layout_gravity="center_vertical"
+    >
 
     <EditText
         android:id="@+id/auth_email"
