--- a/Source/Android/Nevix/nevix/src/main/res/menu/browse.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/menu/browse.xml
@@ -1,6 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:nevix="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.antonyjekov.nevix.activities.BrowseActivity" >
+
+    <item android:id="@+id/open_file_btn"
+        nevix:title="@string/Sync"
+        android:icon="@android:drawable/ic_popup_sync"
+        nevix:showAsAction="always" />
 
 </menu>
