--- a/Source/Android/Nevix/nevix/src/main/res/layout/activity_browse.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/layout/activity_browse.xml
@@ -1,7 +1,11 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    tools:context="com.antonyjekov.nevix.activities.BrowseActivity"
-    tools:ignore="MergeRootFrame" />
+    android:layout_width="match_parent"
+    android:orientation="vertical">
+
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:name="com.antonyjekov.nevix.fragments.FolderFragment" />
+
+</LinearLayout>
