--- a/Source/Android/Nevix/nevix/src/main/res/values/dimens.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/values/dimens.xml
@@ -8,5 +8,7 @@
     <dimen name="prime_btn_text_size">35dp</dimen>
     <dimen name="btn_width">200dp</dimen>
     <dimen name="activity_padding">20dp</dimen>
+    <dimen name="button_stroke_width">2dp</dimen>
+    <dimen name="button_padding">10dp</dimen>
 
 </resources>
