Added client validation for user forms.

--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Home/Index.cshtml
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Home/Index.cshtml
@@ -1,24 +1,26 @@
 ﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1><img src="http://antonyjekov.com/nevix/NevixLogo.png" /> Remote Control (Free)</h1>
+    <p class="lead">NeviX is the solution for controlling your computer media player directly from your Android device!</p>
+    <p>You no longer need to disturb your setting wether you are resting on your couch or snuggling in bed. Now you can simply take controll over your
+    computer's media player and browse your hard drive to play the stuff you want.</p>
+    <p style="text-align:right"><a href="http://asp.net" style="font-size:xx-large" class="btn btn-primary btn-large">Dowload NeviX Desktop Client 1.0.0.48 &raquo;</a><br />
+        <a href="http://sourceforge.net/projects/nevix/files/latest/download?source=directory" target="_blank" style="font-size:small">Download from SourceForge.net</a></p>
 </div>
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+        <p>Learn how to setup NeviX and how to start enjoying its features right away! This guide will lead you towards the full set of steps
+        needed to achieve just that.</p>
+        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Get started &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <h2>Features</h2>
+        <p>Learn about the currently supported media players and the features of both the Android app and the desktop application. Check the system requirments and learn something more about NeviX.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <h2>Pricing</h2>
+        <p>NeviX is a free application and it is intended to stay that way.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
     </div>
 </div>
