--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Shared/_Layout.cshtml
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<body>
+<body style="font-family:'Segoe UI'">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -16,12 +16,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", null, new { @class = "navbar-brand" })
+                <a href="/" class="navbar-brand"><img src="http://antonyjekov.com/nevix/NevixLogoOnly32.png" /> NeviX</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Download", "Index", "Download", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
@@ -30,7 +30,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - NeviX Remote Control</p>
         </footer>
     </div>
 
