--- a/Source/Android/Nevix/nevix/src/main/res/drawable/folder_bg.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/drawable/folder_bg.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<selector>
-    <item>
-        <shape></shape>
-    </item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true" android:drawable="@drawable/folder_pressed_bg" />
+    <item android:drawable="@drawable/folder_idle_bg" />
 </selector>
