--- a/Source/Android/Nevix/nevix/src/main/res/layout/activity_browse.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/layout/activity_browse.xml
@@ -1,7 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#000">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,18 +23,19 @@
             android:layout_toRightOf="@id/back_btn" />
 
         <Button
-            android:id="@+id/sync_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="Sync" />
-
-        <Button
             android:id="@+id/logoff_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/sync_btn"
+            android:layout_alignParentRight="true"
             android:text="Log Off" />
+
+        <Button
+            android:id="@+id/sync_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/logoff_btn"
+            android:text="Sync" />
+
     </RelativeLayout>
 
     <ScrollView
