Working on interaction indicator.

--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Users/ResetPass.cshtml
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Users/ResetPass.cshtml
@@ -12,7 +12,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>Chose a new password (5 - 40 Characters)</h4>
+            <h4>Chose a new password</h4>
             <hr />
             @Html.ValidationSummary(true)
             <div class="form-group" style="display:none">
