--- a/Source/Android/Nevix/nevix/src/main/res/drawable/folder_idle_bg.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/drawable/folder_idle_bg.xml
@@ -9,7 +9,7 @@
     </item>
     <item android:top="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="#000" />
+            <solid android:color="@color/main_bg" />
         </shape>
     </item>
 
