--- a/Source/Android/Nevix/nevix/src/main/res/drawable/folder_pressed_bg.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/drawable/folder_pressed_bg.xml
@@ -9,7 +9,7 @@
     </item>
     <item android:top="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="#777" />
+            <solid android:color="@color/interaction_indicator" />
         </shape>
     </item>
 
