--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Home/Index.cshtml
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Home/Index.cshtml
@@ -1,26 +1,36 @@
-﻿<div class="jumbotron">
-    <h1><img src="http://antonyjekov.com/nevix/NevixLogo.png" /> Remote Control (Free)</h1>
-    <p class="lead">NeviX is the solution for controlling your computer media player directly from your Android device!</p>
-    <p>You no longer need to disturb your setting wether you are resting on your couch or snuggling in bed. Now you can simply take controll over your
-    computer's media player and browse your hard drive to play the stuff you want.</p>
-    <p style="text-align:right"><a href="http://asp.net" style="font-size:xx-large" class="btn btn-primary btn-large">Dowload NeviX Desktop Client 1.0.0.48 &raquo;</a><br />
-        <a href="http://sourceforge.net/projects/nevix/files/latest/download?source=directory" target="_blank" style="font-size:small">Download from SourceForge.net</a></p>
+﻿@{
+    ViewBag.Title = "NeviX Remote Control";
+}
+
+<div class="jumbotron main-jumbotron">
+    <h1><img src="http://antonyjekov.com/nevix/NevixLogo.png" width="10%" /> Remote Control (Free)</h1>
+    <p class="lead">NeviX is the solution for taking control over your desktop media player directly from your Android device!</p>
+    <p>
+        You can now easily command your favourite media player using your Android device. You can send commands such as 'Play', 'Full screen' and many more, as well as browsing and playing files
+        from selected folders on your computer's hard drive.
+    </p>
+    <p style="text-align:right">
+        <a href="http://sourceforge.net/projects/nevix/files/latest/download?source=directory" style="font-size:large" target="_blank" class="btn btn-primary btn-large">Get NeviX for Desktop 1.0.0.70 &raquo;</a>
+        @*<a href="http://sourceforge.net/projects/nevix/files/latest/download?source=directory" target="_blank" style="font-size:small">Download from SourceForge.net</a>*@
+    </p>
 </div>
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
-        <p>Learn how to setup NeviX and how to start enjoying its features right away! This guide will lead you towards the full set of steps
-        needed to achieve just that.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Get started &raquo;</a></p>
+        <p>
+            Learn how to setup NeviX and how to start enjoying its features right away! This guide will lead you towards the full set of steps
+            needed to achieve just that.
+        </p>
+        <p><a class="btn btn-primary" href="/Info/GettingStarted">Get started &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Features</h2>
         <p>Learn about the currently supported media players and the features of both the Android app and the desktop application. Check the system requirments and learn something more about NeviX.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Pricing</h2>
-        <p>NeviX is a free application and it is intended to stay that way.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
+        <h2>The Android App</h2>
+        <p>Make sure to download the Android app from the google store. It is vital to have both apps - one is for sending commands and the other is for executing them.</p>
+        <p><a class="btn btn-primary" href="http://go.microsoft.com/fwlink/?LinkId=301872">Get the app &raquo;</a></p>
     </div>
 </div>
