--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Shared/Error.cshtml
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Shared/Error.cshtml
@@ -9,7 +9,7 @@
     <title>Error</title>
 </head>
 <body>
-    <hgroup>
+    <hgroup class="rejection">
         <h1>Error.</h1>
         <h2>An error occurred while processing your request.</h2>
     </hgroup>
