--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Shared/_Layout.cshtml
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Shared/_Layout.cshtml
@@ -28,9 +28,8 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - NeviX Remote Control</p>
+            <p>All rights reserved Antony Jekov &copy; @DateTime.Now.Year - NeviX Remote Control</p>
         </footer>
     </div>
 
