--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Users/ResetPass.cshtml
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Users/ResetPass.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Jekov.Nevix.Web.ServerApi.ViewModels.ResetPassViewModel
 
 @{
-    ViewBag.Title = "ResetPass";
+    ViewBag.Title = "Reset Password";
 }
 
 <h2>Reset your password</h2>
