--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Home/Index.cshtml
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         from selected folders on your computer's hard drive.
     </p>
     <p style="text-align:right">
-        <a href="http://sourceforge.net/projects/nevix/files/latest/download?source=directory" style="font-size:large" target="_blank" class="btn btn-primary btn-large">Get NeviX for Desktop 1.0.0.70 &raquo;</a>
+        <a href="http://sourceforge.net/projects/nevix/files/latest/download?source=directory" style="font-size:large" target="_blank" class="btn btn-primary btn-large">Get NeviX 1.0.0.72 &raquo;</a>
         @*<a href="http://sourceforge.net/projects/nevix/files/latest/download?source=directory" target="_blank" style="font-size:small">Download from SourceForge.net</a>*@
     </p>
 </div>
@@ -26,11 +26,11 @@
     <div class="col-md-4">
         <h2>Features</h2>
         <p>Learn about the currently supported media players and the features of both the Android app and the desktop application. Check the system requirments and learn something more about NeviX.</p>
-        <p><a class="btn btn-primary" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary" href="/Info/Features">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>The Android App</h2>
         <p>Make sure to download the Android app from the google store. It is vital to have both apps - one is for sending commands and the other is for executing them.</p>
-        <p><a class="btn btn-primary" href="http://go.microsoft.com/fwlink/?LinkId=301872">Get the app &raquo;</a></p>
+        <p><a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=com.antonyjekov.nevix" target="_blank">Get the app &raquo;</a></p>
     </div>
 </div>
