--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Info/GettingStarted.cshtml
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Info/GettingStarted.cshtml
@@ -1,16 +1,59 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "GettingStarted";
 }
 
-<div class="jumbotron">
+<div class="row">
     <h1>Getting started</h1>
+
+    <ol class="get-started-list">
+        <li>
+            <p>First you need to download the NeviX Desktop Client. If you haven't already you can obtain it from here - <a href="http://sourceforge.net/projects/nevix/files/latest/download?source=directory" style="font-size:medium" class="btn btn-primary">Get NeviX Latest</a></p>
+        </li>
+        <li>
+            <p>You then need to extract the zip file and open the newly creted directory.</p>
+            <img src="http://nevix-remote.com/assets/001.jpg" alt="Setup screenshot" />
+        </li>
+        <li>
+            <p>Now run the setup.exe file and install the application.</p>
+            <img src="http://nevix-remote.com/assets/002.jpg" alt="Setup screenshot" />
+            <img src="http://nevix-remote.com/assets/003.jpg" alt="Setup screenshot" />
+        </li>
+        <li>
+            <p>After the installation has been done you can register using your email address.</p>
+            <img src="http://nevix-remote.com/assets/004.jpg" alt="Setup screenshot" />
+        </li>
+        <li>
+            <p>Next step is to check your email address and follow the activation link. If you cannot see the confirmation email please check your 'Spam' folder. Some email filters might not recognize our server as it is new.</p>
+            <img src="http://nevix-remote.com/assets/005.jpg" alt="Setup screenshot" />
+            <img src="http://nevix-remote.com/assets/006.jpg" alt="Setup screenshot" />
+        </li>
+        <li>
+            <p>After confirming your email you can login in both the desktop and the Andoid apps and setup the folders you would like to share between your devices.</p>
+            <img src="http://nevix-remote.com/assets/007.jpg" alt="Setup screenshot" />
+        </li>
+        <li>
+            <p>Next you can select your favorite media player from the drop down menu. If the player you want is not in the menu make sure you have installed the player. If you still cannot see your player make sure it is supported. We are currently working on integrating all major media players. Requests are welcome.</p>
+            <p>If your player is supported and you still cannot see it just use the Add Player button to manualy select and add it.</p>
+            <img src="http://nevix-remote.com/assets/008.jpg" alt="Setup screenshot" />
+        </li>
+        <li>
+            <p>Now your computer is all set and you can take over using your Android device. Use the account you just created to login using your Android device.</p>
+            <img src="http://nevix-remote.com/assets/009.jpg" alt="Setup screenshot" />
+        </li>
+        <li>
+            <p>After logging in first hit the button that looks like an arrow pointing up to turn on your media player and then hit the browse icon to browse the content of the folders that you previously added using your computer app.</p>
+            <img src="http://nevix-remote.com/assets/010.jpg" alt="Setup screenshot" />
+        </li>
+        <li>
+            <p>Pick something you would like to watch and your computer will load it right away.</p>
+            <img src="http://nevix-remote.com/assets/012.jpg" alt="Setup screenshot" />
+            <img src="http://nevix-remote.com/assets/013.jpg" alt="Setup screenshot" />
+        </li>
+    </ol>
+
     <p>
-        <ol>
-            <li>
-                Ffirst you need to download the NeviX Desktio Client. If you haven't already you can obtain it from here - <a href="http://sourceforge.net/projects/nevix/files/latest/download?source=directory" style="font-size:medium" class="btn btn-primary">Get NeviX Latest</a>
-            </li>
-        </ol>
+        You can now enjoy the freedom of commanding your computer from a distance. In fact you con control it from any distance as long as both devices are connected to some form of internet. If you have any problems please feel free to contact us at <a href="mailto:support@nevix-remote.com">support@nevix-remote.com</a>
     </p>
+
 </div>
 
