--- a/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Shared/_Layout.cshtml
+++ b/Source/Jekov.Nevix/Web/Jekov.Nevix.Web.ServerApi/Views/Shared/_Layout.cshtml
@@ -21,7 +21,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Download", "Index", "Download", new { area = "" }, null)</li>
+                    <li><a href="http://sourceforge.net/projects/nevix/files/latest/download?source=directory" target="_blank">Download</a></li>
+                    <li><a href="mailto:support@nevix-remote.com" target="_blank">Report a problem</a></li>
                 </ul>
             </div>
         </div>
