--- a/Source/Android/Nevix/nevix/src/main/res/layout/activity_browse.xml
+++ b/Source/Android/Nevix/nevix/src/main/res/layout/activity_browse.xml
@@ -4,11 +4,11 @@
     android:orientation="vertical"
     android:background="#111">
 
-    <com.startapp.android.publish.banner.Banner
+    <!--<com.startapp.android.publish.banner.Banner
         android:id="@+id/startAppBanner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true" />-->
 
     <RelativeLayout
         android:layout_width="match_parent"
